# cyPredict

./: .gitignore  README.md  cypredict.py  pyproject.toml  pytest.ini
cyPredict/: __init__.py  config.py  cypredict.py  logging_utils.py  native_imports.py  results.py
cyPredict/core/: __init__.py  analysis.py  data.py  dates.py  detrending.py  diagnostics.py  extrema.py  indicators.py  minmax.py  multiperiod.py  optimization.py  persistence.py  plotting.py  reconstruction.py  scoring.py  spectral.py  state.py
docs/: api_inventory.md  api_reference.md  baseline_scenarios.md  known_baseline_blockers.md  logging.md  native_dependencies.md  parameter_matrix.md  public_api.md  result_contracts.md
examples/: minimal_import.py
native/: README.md
native/cyfitness/: cyfitness.cpp  cyfitness_setup.py
native/cygaopt/: CMakeLists.txt  cyGAopt - V1.1.cpp  cyGAopt - V1.2.cpp  cyGAopt - V1.cpp  cyGAopt.cpp  cycle_fitness_core.hpp  genetic_core.hpp  setup.py
native/cygaopt_multicore/: CMakeLists.txt  cyGAoptMulticore.cpp  setup.py
native/genetic_optimization_legacy/: genetic_optimization.c  genetic_optimization_setup.py
native/goertzel/: Release Notes.txt  goertzel.cpp  setup.py
scripts/: build_native.ps1  capture_golden_baseline.py  clean_native_build.ps1  run_optimization_smoke_matrix.py  verify_packaging.ps1
sviluppi_programmati/: cypredict_cleanup_refactor_plan.md  cypredict_modularization_plan.md
tests/: test_api_parameter_contracts.py  test_capture_harness.py  test_config_objects.py  test_cypredict_import.py  test_docstring_contracts.py  test_golden_artifact_schema.py  test_golden_cypredict.py  test_legacy_import_paths.py  test_logging_configuration.py  test_logging_utils.py  test_native_ga_parity.py  test_native_imports.py  test_optimization_smoke_matrix.py  test_plotting_helpers.py  test_reconstruction.py  test_result_objects.py
tests/golden/: README.md
(+4 files in other folders)
